[package]
name = "cc-fs"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
bincode = "1.3.3"
clap = { version = "3.2.16", features = ["derive"] }
fuser = "0.11.0"
generic-array = "0.14.6"
libc = "0.2.131"
serde = { version = "1.0.143", features = ["derive"] }
sha2 = { version = "0.10.2", features = ["compress"] }
